--- a/CSS/default.css
+++ b/CSS/default.css
@@ -1,4 +1,4 @@
-body{margin:0;padding:0;font-size:18px;font-family:'微软雅黑','宋体',sans-serif;color:#231F20; width:1100px;}
+﻿body{margin:0;padding:0;font-size:18px;font-family:'微软雅黑','宋体',sans-serif;color:#231F20; width:1100px;}
 a {color:#000;font-size:14px;}
 #main{ background:url(../images/011.jpg);-webkit-background-size: cover;
 	background-size: cover;}
@@ -12,6 +12,6 @@ a {color:#000;font-size:14px;}
 #canvas{margin:0 auto;width:1100px;height:680px;}
 #error{margin:0 auto;text-align:center;margin-top:60px;display:none;}
 .hand{cursor:pointer;}
-.say{margin-left:5px; padding-bottom:20px;}
+.say{margin-left:5px; padding-bottom:20px;color:#FFF;}
 .space{margin-right:150px;}
-.zi{ font-size:22px; color:#7D6666;}
+.zi{ font-size:22px; color:#FFF;}
