--- a/CSS/default.css
+++ b/CSS/default.css
@@ -12,6 +12,6 @@ a {color:#000;font-size:14px;}
 #canvas{margin:0 auto;width:1100px;height:680px;}
 #error{margin:0 auto;text-align:center;margin-top:60px;display:none;}
 .hand{cursor:pointer;}
-.say{margin-left:5px; padding-bottom:20px;color:#FFF;}
+.say{margin-left:5px; padding-bottom:20px;color:#0568ce;}
 .space{margin-right:150px;}
-.zi{ font-size:22px; color:#FFF;}
+.zi{ font-size:22px; color:#0568ce;}
